--- a/index.html
+++ b/index.html
@@ -31,8 +31,22 @@
                 </div>
             </div>
 
-            <br><a id="startButton" class="title" href="feud.html">Continue to the story</a><br><br>
+            <br><a id="startButton" class="title" href="feud.html">Continue to the story</a><br><br><br><br><br><br>
             
+            <br><div class="centerAsBlock">
+                <div class="title">Images from:</div>
+                    https://en.wikipedia.org/wiki/Mr._Krabs
+                    https://spongebob.fandom.com/wiki/Sheldon_J._Plankton
+                    https://spongebob.fandom.com/wiki/Plankton-Krabs_relationship
+                    https://www.youtube.com/watch?v=TbSUvHkVWpM
+                    https://www.imdb.com/title/tt0999276/
+                    https://tvtropes.org/pmwiki/pmwiki.php/Recap/SpongeBobSquarePantsS5E1FriendOrFoe
+                    https://nickelodeon.fandom.com/wiki/The_Krusty_Krab
+                    https://spongebob.fandom.com/wiki/Chum_Bucket
+                    https://pericror.com/zoom-background/spongebob-zoom-background/
+                <br><br>
+            </div>
+
         </div>
 
     </body>
